| Summary: | ASTERISK-27877: app_confbridge: Add talking indicator for ConfBridgeList AMI response | ||
| Reporter: | William McCall (wimccall) | Labels: | |
| Date Opened: | 2018-05-27 20:52:50 | Date Closed: | 2018-06-06 09:47:33 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Applications/app_confbridge |
| Versions: | 13.21.0 15.4.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | When conferences are ongoing, there is no mechanism to synchronize the speaker talking state with an external application over AMI. This feature implements a "Talking" item in confbridgelist to indicate that a caller is talking. This functionality relies on talk_detection_events=yes in the confbridge config.
This is related (and similar to) ASTERISK-25678. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2018-05-27 20:52:52.496-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Richard Mudgett (rmudgett) 2018-05-28 10:17:42.821-0500 Features requests without patches are not accepted through the issue tracker. Features requests are openly discussed on the mailing lists, forums, and IRC [1]. Please see the Asterisk Issue Guidelines [2] for more information on feature request and patch submission. [1] http://asterisk.org/community/discuss [2] https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines I'm a bit puzzled by the description since there already is an AMI ConfbridgeTalking event \[1] for this transient status information. \[1] https://wiki.asterisk.org/wiki/display/AST/Asterisk+13+ManagerEvent_ConfbridgeTalking By: William McCall (wimccall) 2018-05-28 18:20:50.586-0500 Hey Richard-- I'm submitting this through Gerritt here shortly (by the end of the week). Following the guidelines so that way an issue can be mapped to the commit. The purpose of this feature/future patch is that an AMI client may have missed the ConfbridgeTalking event. In this case, the client may wish to synchronize the current talking state. In practice, this can occur for a few reasons (example, AMI client crashed or was not attached/receiving ConfbridgeTalking events when bridge was created or talker state changed). An additional benefit is that the ConfbridgeTalking events don't necessarily have to be followed, depending on the application's objectives in polling this information. By: Friendly Automation (friendly-automation) 2018-06-06 09:47:34.651-0500 Change 9060 merged by George Joseph: app_confbridge: Add talking indicator for ConfBridgeList AMI response [https://gerrit.asterisk.org/9060|https://gerrit.asterisk.org/9060] By: Friendly Automation (friendly-automation) 2018-06-06 09:48:00.595-0500 Change 9061 merged by George Joseph: app_confbridge: Add talking indicator for ConfBridgeList AMI response [https://gerrit.asterisk.org/9061|https://gerrit.asterisk.org/9061] By: Friendly Automation (friendly-automation) 2018-06-06 09:48:24.183-0500 Change 9062 merged by George Joseph: app_confbridge: Add talking indicator for ConfBridgeList AMI response [https://gerrit.asterisk.org/9062|https://gerrit.asterisk.org/9062] | ||